# unrimp

./: .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  CMakeSettings.json  ChangeLog  LICENSE  README  README.md  TODO  launch.vs.json
Example/ExampleProjectCompiler/: CMakeLists.txt  Readme.txt
Example/ExampleProjectCompiler/src/: CommandLineArguments.cpp  CommandLineArguments.h  Main.cpp  Main.h
Example/Examples/: CMakeLists.txt  ExamplesUnityBuild.cpp  Readme.txt
Example/Examples/sdl2/: CMakeLists.txt
Example/Examples/sdl2/src/: ConsoleExampleRunner.cpp  ConsoleExampleRunner.h  ExampleRunner.cpp  ExampleRunner.h  IApplicationRenderer.cpp  IApplicationRenderer.h  IApplicationRendererRuntime.cpp  IApplicationRendererRuntime.h  Main.cpp
Example/Examples/src/: ConsoleExampleRunner.cpp  ConsoleExampleRunner.h  ExampleRunner.cpp  ExampleRunner.h  Main.cpp  PrecompiledHeader.cpp  PrecompiledHeader.h
Example/Examples/src/Framework/: ApplicationImplLinux.cpp  ApplicationImplLinux.h  ApplicationImplSdl2.cpp  ApplicationImplSdl2.h  ApplicationImplWindows.cpp  ApplicationImplWindows.h  CLocaleChanger.h  Color4.cpp  CommandLineArguments.cpp  CommandLineArguments.h  ExampleBase.cpp  ExampleBase.h  IApplication.cpp  IApplication.h  IApplicationFrontend.h  IApplicationImpl.h  IApplicationRenderer.cpp  IApplicationRenderer.h  IApplicationRendererRuntime.cpp  IApplicationRendererRuntime.h  LinuxHeader.h  Main.h  PlatformTypes.h  RefCount.h  RefCountPtr.h  SmartPtr.h  SmartRefCount.h  WindowsHeader.h  X11Application.cpp  X11Application.h  X11Window.cpp
Example/Source/ExampleProjectCompiler/: CMakeLists.txt  Readme.txt
Example/Source/ExampleProjectCompiler/Private/: CommandLineArguments.cpp  CommandLineArguments.h  Main.cpp
Example/Source/ExampleSDL2/: CMakeLists.txt  Readme.txt
Example/Source/ExampleSDL2/Private/: ExampleSDL2_GLSL_410.h  ExampleSDL2_GLSL_450.h  ExampleSDL2_GLSL_ES3.h  ExampleSDL2_HLSL_D3D9_D3D10_D3D11_D3D12.h  ExampleSDL2_Null.h  Main.cpp
Example/Source/Examples/: CMakeLists.txt  ExamplesUnityBuild.cpp  Readme.txt
Example/Source/Examples/Private/: ExampleRunner.cpp  ExampleRunner.h  Main.cpp
Renderer/Renderer/: CMakeLists.txt  DefaultAllocator.h  DefaultAssert.h  DefaultLog.h  Doxyfile  Renderer.h  RendererInstance.h
Renderer/Renderer/Direct3D10Renderer/: CMakeLists.txt  Direct3D10Renderer.cpp
Renderer/Renderer/Direct3D11Renderer/: CMakeLists.txt  Direct3D11Renderer.cpp
Renderer/Renderer/Direct3D12Renderer/: CMakeLists.txt  Direct3D12Renderer.cpp
Renderer/Renderer/Direct3D9Renderer/: CMakeLists.txt  Direct3D9Renderer.cpp
Renderer/Renderer/NullRenderer/: CMakeLists.txt  NullRenderer.cpp
Renderer/Renderer/OpenGLES3Renderer/: CMakeLists.txt  OpenGLES3Renderer.cpp
Renderer/Renderer/OpenGLRenderer/: CMakeLists.txt  OpenGLRenderer.cpp
Renderer/Renderer/VulkanRenderer/: CMakeLists.txt  VulkanRenderer.cpp
Renderer/RendererRuntime/: CMakeLists.txt  Readme.txt  RendererRuntimeUnityBuild.cpp
Renderer/RendererRuntime/include/RendererRuntime/: Context.h  Export.h  IRendererRuntime.h  PrecompiledHeader.h
Renderer/RendererRuntime/src/: Context.cpp  PrecompiledHeader.cpp
Renderer/RendererRuntime/src/Asset/: AssetManager.cpp  AssetPackage.cpp
Renderer/RendererRuntime/src/Backend/: RendererRuntimeImpl.cpp
Renderer/RendererRuntime/src/DebugGui/: DebugGuiHelper.cpp  DebugGuiManager.cpp
Renderer/RendererRuntime/src/RenderQueue/: RenderQueue.cpp  Renderable.cpp  RenderableManager.cpp
Renderer/RendererRuntime/src/Resource/: IResourceListener.cpp
Source/Renderer/: CMakeLists.txt  Readme.txt  Renderer.natvis  RendererUnityBuild.cpp
Source/Renderer/Private/: CMakeLists.txt
Source/Renderer/Private/Direct3D10Renderer/: CMakeLists.txt  Direct3D10Renderer.cpp
Source/Renderer/Private/Direct3D11Renderer/: CMakeLists.txt  Direct3D11Renderer.cpp
Source/Renderer/Private/Direct3D12Renderer/: CMakeLists.txt  Direct3D12Renderer.cpp
Source/Renderer/Private/Direct3D9Renderer/: CMakeLists.txt  Direct3D9Renderer.cpp
Source/Renderer/Private/NullRenderer/: CMakeLists.txt  NullRenderer.cpp
Source/Renderer/Private/OpenGLES3Renderer/: CMakeLists.txt  OpenGLES3Renderer.cpp
Source/Renderer/Private/OpenGLRenderer/: CMakeLists.txt  OpenGLRenderer.cpp
Source/Renderer/Private/VulkanRenderer/: CMakeLists.txt  VulkanRenderer.cpp
Source/Renderer/Public/: Context.cpp  Context.h  DefaultAllocator.h  DefaultAssert.h  DefaultLog.h  Export.h  IRenderer.h  Renderer.h  RendererImpl.cpp  RendererImpl.h  RendererInstance.h
Source/Renderer/Public/Asset/: Asset.h  AssetManager.cpp  AssetManager.h  AssetPackage.cpp  AssetPackage.h
Source/Renderer/Public/Core/: GetInvalid.h  IGraphicsDebugger.h  IProfiler.h  Loader.h  Manager.h  PackedElementManager.h  RemoteryProfiler.h  RenderDocGraphicsDebugger.h  StringId.h  SwizzleVectorElementRemove.h
Source/Renderer/Public/DebugGui/: DebugGuiHelper.cpp  DebugGuiHelper.h  DebugGuiManager.cpp  DebugGuiManager.h  ImGuiLog.h
Source/Renderer/Public/RenderQueue/: RenderQueue.cpp  RenderQueue.h  Renderable.cpp  Renderable.h  RenderableManager.cpp  RenderableManager.h
Source/Renderer/Public/Resource/: IResource.cpp  IResource.h  IResourceListener.cpp  IResourceListener.h  IResourceLoader.h  IResourceManager.h  RendererResourceManager.cpp  RendererResourceManager.h  ResourceManager.h  ResourceManagerTemplate.h  ResourceStreamer.cpp  ResourceStreamer.h
Source/Renderer/Public/Vr/: IVrManager.h
Source/RendererToolkit/: CMakeLists.txt  Readme.txt
Source/RendererToolkit/Private/: Context.h  IRendererToolkit.h  RendererToolkitImpl.cpp  RendererToolkitImpl.h
Source/RendererToolkit/Private/AssetCompiler/: CompositorNodeAssetCompiler.cpp  CompositorNodeAssetCompiler.h  CompositorWorkspaceAssetCompiler.cpp  CompositorWorkspaceAssetCompiler.h  IAssetCompiler.cpp  IAssetCompiler.h  MaterialAssetCompiler.cpp  MaterialAssetCompiler.h  MaterialBlueprintAssetCompiler.cpp  MaterialBlueprintAssetCompiler.h  (+16 more)
Source/RendererToolkit/Public/: RendererToolkit.h  RendererToolkitInstance.h
Source/Rhi/Private/: CMakeLists.txt
(+2270 files in other folders)
